--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>QR code</title>
         <link href="style.css" rel="stylesheet" type="text/css" />
+        <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/5/56/Chain_link_icon_slanted.png" />
     </head>
     
     <body>
